# uptop_message

./: Cargo.toml  README.md
proto/: message.proto
src/application/: mod.rs
src/application/latest_message/: app.rs  request.rs  response.rs
src/application/notification/: app.rs  request.rs  response.rs
src/application/topic/: app.rs  request.rs  response.rs
src/application/topic_message/: app.rs  request.rs  response.rs
src/application/topic_user/: app.rs  request.rs  response.rs
src/application/user_topic/: app.rs  request.rs  response.rs
src/domain/: mod.rs
src/domain/latest_message/: entity.rs  repository.rs
src/domain/notification/: entity.rs  repository.rs
src/domain/topic/: entity.rs  repository.rs
src/domain/topic_message/: entity.rs  repository.rs
src/domain/topic_user/: entity.rs  repository.rs
src/domain/user_topic/: entity.rs  repository.rs
src/infrastructure/: persistence.rs
src/infrastructure/persistence/: latest_message_repository.rs  notification_repository.rs  topic_message_repository.rs  topic_repository.rs  topic_user_repository.rs  user_topic_repository.rs
src/interfaces/: actions.rs  message_handler.rs  mod.rs  topic_handler.rs
