[package]
name = "uptop_message"
version = "0.1.0"
edition = "2021"

[lib]
name = "message"
path = "src/lib.rs"

[[bin]]
name = "server_message"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.86"
charybdis = "0.7.7"
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["full"] }
prost = "0.13.2"
scylla = "0.14.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tracing = "0.1.40"
validator = { version = "0.18.1", features = ["derive"] }
dotenv = "0.15.0"

# Uptop module
uptop_core = { path = "../uptop_core" }

[build-dependencies]
tonic-build = "0.12.1"
